--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
-
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>{% block title %}{% endblock %}</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+        <link rel="icon" href="{{ asset('img/logo7.png') }}">
     </head>
     <body>
+    <div class="container-fluid"  style="background-color: #0f3c6d">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="{{ path('main_home') }}">
+                <img src="{{ asset('img/logo9.png') }}" alt="Logo PalmTree" width="161" height="40" class="d-inline-block align-top">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav gap-2 me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="btn" aria-current="page" href="{{ path('main_home') }}" style="color: white">
+                            <i class="fas fa-home"></i> Accueil
+                        </a>
+                    </li>
+                </ul>
+                <div class="navbar-nav justify-content-end">
+                    <ul class="navbar-nav gap-2 me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="btn btn-primary" aria-current="page" href=""><i class="fas fa-heart"></i> <strong>Inscription</strong></a>
+                            <a class="btn btn-outline-light" aria-current="page" href=""><i class="fas fa-user"></i> Connexion</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+    </div>
+    <main>
         {% block body %}{% endblock %}
+    </main>
+    <footer>
+        <div class="container-fluid bg-light">
+            <div class="text-center">
+                <p>Logo par <a href="https://dribbble.com/shots/3662442-Parrot-logo-design">Deividas Bielskis</a></p>
+                &copy; Parrot
+            </div>
+        </div>
+    </footer>
     </body>
 </html>
