--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -3,5 +3,23 @@
 {% block title  %}Bucky{% endblock %}
 
 {% block body %}
-
+    <div class="container">
+        <div class="card">
+            <img class="card-img" src="{{ asset('img/magic-lamp.jpg') }}" alt="Magic lamp">
+            <div class="card-img-overlay text-white d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.4);">
+                <div class="col text-center">
+                    <p class="display-3">
+                        <strong>Rejoignez Bucky et vivez vos rêves!</strong>
+                    </p>
+                    <p class="h1">
+                        <a href="#" class="link-light">
+                            <span class="icon"><i class="fas fa-star"></i></span>
+                            Créez votre compte maintenant
+                            <span class="icon"><i class="fas fa-star"></i></span>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
