--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>{% block title %}{% endblock %}</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-        <link rel="icon" href="{{ asset('img/logo7.png') }}">
-    </head>
-    <body>
-    <div class="container-fluid"  style="background-color: #0f3c6d">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <link rel="icon" href="{{ asset('img/logo7.png') }}">
+</head>
+<body>
+<div class="container-fluid"  style="background-color: #0f3c6d">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ path('main_home') }}">
@@ -40,17 +40,29 @@
             </div>
         </div>
     </nav>
-    </div>
-    <main>
-        {% block body %}{% endblock %}
-    </main>
-    <footer>
-        <div class="container-fluid bg-light">
-            <div class="text-center">
-                <p>Logo par <a href="https://dribbble.com/shots/3662442-Parrot-logo-design">Deividas Bielskis</a></p>
-                &copy; Parrot
+</div>
+<main>
+    {% block body %}{% endblock %}
+</main>
+<footer>
+    <div class="container-fluid bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <ul class="nav">
+                        <li class="nav-link"><a href="{{ path('main_home') }}" class="link-secondary">Bucky</a></li>
+                        <li class="nav-link"><a href="#" class="link-secondary">RGPD</a></li>
+                        <li class="nav-link"><a href="#" class="link-secondary">Informations</a></li>
+                        <li class="nav-link"><a href="#" class="link-secondary">blabla</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </footer>
-    </body>
+        <div class="text-center">
+            <p>Logo par <a href="https://dribbble.com/shots/3662442-Parrot-logo-design" class="link-secondary">Deividas Bielskis</a></p>
+            &copy; Bucky {{ "now"|date("Y") }}
+        </div>
+    </div>
+</footer>
+</body>
 </html>
