--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -9,12 +9,12 @@
             <div class="card-img-overlay text-white d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.4);">
                 <div class="col text-center">
                     <p class="display-3">
-                        <strong>Rejoignez Bucky et vivez vos rêves!</strong>
+                        <strong>Rejoignez Bucky et Vivez vos Rêves!</strong>
                     </p>
-                    <p class="h1">
+                    <p class="h2">
                         <a href="#" class="link-light">
                             <span class="icon"><i class="fas fa-star"></i></span>
-                            Créez votre compte maintenant
+                            {{ 'Créez votre compte maintenant'|upper }}
                             <span class="icon"><i class="fas fa-star"></i></span>
                         </a>
                     </p>
