--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="{{ asset('css/app.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <link rel="icon" href="{{ asset('img/logo7.png') }}">
 </head>
@@ -16,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ path('main_home') }}">
-                <img src="{{ asset('img/logo9.png') }}" alt="Logo PalmTree" width="161" height="40" class="d-inline-block align-top">
+                <img src="{{ asset('img/logo9.png') }}" alt="Logo Bucky" width="161" height="40" class="d-inline-block align-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav gap-2 me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="btn" aria-current="page" href="{{ path('main_home') }}" style="color: white">
+                        <a class="btn text-white" aria-current="page" href="{{ path('main_home') }}">
                             <i class="fas fa-home"></i> Accueil
                         </a>
                     </li>
@@ -50,7 +51,7 @@
             <div class="row">
                 <div class="col">
                     <ul class="nav">
-                        <li class="nav-link"><a href="{{ path('main_home') }}" class="link-secondary">Bucky</a></li>
+                        <li class="nav-link"><a href="{{ path('main_home') }}" class="link-secondary">About Us</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">RGPD</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">Informations</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">blabla</a></li>
