--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     <div class="container">
         <div class="card">
-            <img class="card-img" src="{{ asset('img/magic-lamp.jpg') }}" alt="Magic lamp">
-            <div class="card-img-overlay text-white d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.4);">
+            <img class="card-img" src="{{ asset('img/magic-lamp2.jpg') }}" alt="Magic lamp">
+            <div class="card-img-overlay text-white d-flex justify-content-center align-items-center overlay-dark">
                 <div class="col text-center">
                     <p class="display-3">
                         <strong>Rejoignez Bucky et Vivez vos Rêves!</strong>
