--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
     <link rel="icon" href="{{ asset('img/logo7.png') }}">
 </head>
 <body>
-<div class="container-fluid"  style="background-color: #0f3c6d">
+<div class="container-fluid dark-blue">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ path('main_home') }}">
@@ -51,7 +51,7 @@
             <div class="row">
                 <div class="col">
                     <ul class="nav">
-                        <li class="nav-link"><a href="{{ path('main_home') }}" class="link-secondary">About Us</a></li>
+                        <li class="nav-link"><a href="{{ path('main_about-us') }}" class="link-secondary">About Us</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">RGPD</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">Informations</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">blabla</a></li>
