--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title  %}Bucky{% endblock %}
+{% block title  %}{{ parent() }} Bucky{% endblock %}
 
 {% block body %}
     <div class="container">
@@ -9,7 +9,7 @@
             <div class="card-img-overlay text-white d-flex justify-content-center align-items-center overlay-dark">
                 <div class="col text-center">
                     <p class="display-3">
-                        <strong>Rejoignez Bucky et Vivez vos Rêves!</strong>
+                        <strong>Rejoignez Bucky et gérez vos Rêves!</strong>
                     </p>
                     <p class="h2">
                         <a href="#" class="link-light">
