--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title  %}Bucky | Detail{% endblock %}
+{% block title  %}{{ parent() }} | Detail{% endblock %}
 
 {% block body %}
     <div class="container">
-        <h1>Détail <i class="fas fa-feather"></i></h1>
+        <h1>Détail <i class="fas fa-star"></i></h1>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum risus arcu, a cursus purus vulputate
             id. Praesent vestibulum augue facilisis ante tincidunt vulputate. Proin cursus felis et massa sagittis, vel
