--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title  %}Bucky | Liste{% endblock %}
+{% block title  %}{{ parent() }} | Liste{% endblock %}
 
 {% block body %}
     <div class="container">
