--- a/templates/main/about-us.html.twig
+++ b/templates/main/about-us.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title  %}Bucky | About Us{% endblock %}
+{% block title  %}{{ parent() }} | About Us{% endblock %}
 
 {% block body %}
     <div class="container">
