--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="col">
                     <ul class="nav">
-                        <li class="nav-link"><a href="{{ path('main_about-us') }}" class="link-secondary">About Us</a></li>
+                        <li class="nav-link"><a href="{{ path('main_about_us') }}" class="link-secondary">About Us</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">RGPD</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">Informations</a></li>
                         <li class="nav-link"><a href="#" class="link-secondary">blabla</a></li>
