--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,3 +9,13 @@
 .dark-blue{
     background-color: #0f3c6d;
 }
+
+.img-wish{
+    max-width: 100px;
+    padding: 5px;
+}
+
+.list-wishes{
+    flex-direction: row;
+    max-height: 150px;
+}
