--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title  %}{{ parent() }} Bucky{% endblock %}
+{% block title  %}{{ parent() }}Bucky{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="card">
-            <img class="card-img" src="{{ asset('img/magic-lamp2.jpg') }}" alt="Magic lamp">
+            <img class="card-img img-fluid" src="{{ asset('img/magic-lamp-large-2.jpg') }}" alt="Magic lamp">
             <div class="card-img-overlay text-white d-flex justify-content-center align-items-center overlay-dark">
                 <div class="col text-center">
                     <p class="display-3">
-                        <strong>Rejoignez Bucky et gérez vos Rêves!</strong>
+                        <strong>Rejoignez Bucky et gérez vos Vœux!</strong>
                     </p>
                     <p class="h2">
                         <a href="#" class="link-light">
