--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title  %}{{ parent() }} | Detail{% endblock %}
+{% block title  %}{{ parent() }}Detail{% endblock %}
 
 {% block body %}
     <div class="container">
