--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,7 +39,7 @@
                 <div class="navbar-nav justify-content-end">
                     <ul class="navbar-nav gap-2 me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="btn btn-primary" aria-current="page" href=""><i class="fas fa-heart"></i> <strong>Inscription</strong></a>
+                            <a class="btn btn-warning" aria-current="page" href=""><i class="fas fa-heart"></i> <strong>Inscription</strong></a>
                             <a class="btn btn-outline-light" aria-current="page" href=""><i class="fas fa-user"></i> Connexion</a>
                         </li>
                     </ul>
@@ -49,7 +49,9 @@
     </nav>
 </div>
 <main>
-    {% block body %}{% endblock %}
+    <div class="container-fluid">
+        {% block body %}{% endblock %}
+    </div>
 </main>
 <footer>
     <div class="container-fluid bg-light">
