--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,7 +55,7 @@
 </main>
 <footer>
     <div class="container-fluid bg-light">
-        <div class="container">
+        <div class="container pt-4">
             <div class="row">
                 <div class="col">
                     <ul class="nav">
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-center">
+        <div class="text-center pb-5">
             <p>Logo par <a href="https://dribbble.com/shots/3662442-Parrot-logo-design" class="link-secondary">Deividas Bielskis</a></p>
             &copy; Bucky {{ "now"|date("Y") }}
         </div>
