--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -4,20 +4,21 @@
 
 {% block body %}
     <div class="container">
-        <h1>Détail <i class="fas fa-star"></i></h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum risus arcu, a cursus purus vulputate
-            id. Praesent vestibulum augue facilisis ante tincidunt vulputate. Proin cursus felis et massa sagittis, vel
-            congue leo gravida. In pretium luctus nunc, vel consequat sapien semper nec. Mauris pretium fringilla laoreet.
-            Phasellus tincidunt condimentum tincidunt. Vestibulum quis ligula vitae tortor viverra consequat ut vehicula
-            nisi.
-        </p>
-        <p>
-            Aliquam fringilla sapien at tellus dignissim ullamcorper at sit amet mi. Vestibulum blandit enim et justo
-            vehicula, eu egestas nisl consectetur. Nullam vestibulum mi at ante faucibus volutpat. Duis efficitur
-            tristique justo. Praesent in facilisis lectus. Etiam quis dui euismod, elementum eros nec, iaculis nisi.
-            Nunc ut luctus lacus. Donec elementum et leo vel vestibulum. Aliquam vel augue ut dui hendrerit finibus ut
-            at turpis. Aliquam eget rutrum sem. Sed sagittis faucibus augue non euismod.
-        </p>
+        <div class="card mb-3 mt-2">
+            <div class="card-body text-center">
+                <h1 class="card-title"><i class="fas fa-star"></i> {{ wish.title }} <i class="fas fa-star"></i></h1>
+                <h5 class="card-text">
+                    {{ wish.author }}
+                </h5>
+                <p class="card-text">
+                    {{ wish.description }}
+                </p>
+                <img style="width: 18rem;" src="{{ asset('img/wish.jpg') }}" class="card-img-bottom rounded" alt="wish image">
+                <p class="card-text">
+                    <small class="text-muted">Publié le {{ wish.dateCreated|date('d/m/Y à H:i') }}</small>
+                </p>
+            </div>
+        </div>
     </div>
+
 {% endblock %}
