--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -4,42 +4,23 @@
 
 {% block body %}
     <div class="container">
-        <h1>Liste des voeux <i class="bi bi-stars"></i></h1>
+        <h1 class="text-center">Liste des voeux <i class="bi bi-stars"></i></h1>
 
-        <div class="col">
-            <div class="card list-wishes">
-                <div class="bd-placeholder-img">
-                    <img src="{{ asset('img/wish.jpg') }}" alt="look up to the stars" class="img-wish rounded float-start">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Richesse</h5>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
+        {% for wish in wishes %}
+            <div class="col mb-1 mt-2">
+                <a href="{{ path('wish_detail', {id:wish.id}) }}" class="no-underline">
+                    <div class="card list-wishes">
+                        <div class="bd-placeholder-img">
+                            <img src="{{ asset('img/wish.jpg') }}" alt="look up to the stars" class="img-wish rounded float-start">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">{{ wish.title }}</h5>
+                            <p class="card-text">{{ wish.author }}</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-        </div>
+        {% endfor %}
 
-        <div class="col">
-            <div class="card list-wishes">
-                <div class="bd-placeholder-img">
-                    <img src="{{ asset('img/wish.jpg') }}" alt="look up to the stars" class="img-wish rounded float-start">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Bonheur</h5>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col">
-            <div class="card list-wishes">
-                <div class="bd-placeholder-img">
-                    <img src="{{ asset('img/wish.jpg') }}" alt="look up to the stars" class="img-wish rounded float-start">
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Santé</h5>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </div>
     </div>
 {% endblock %}
