--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
     </div>
 </main>
 <footer>
-    <div class="container-fluid bg-light">
+    <div class="container-fluid bg-light mt-2">
         <div class="container pt-4">
             <div class="row">
                 <div class="col">
