ajustement de la taille de l'image d'un wish responsive

--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -13,7 +13,7 @@
                 <p class="card-text">
                     {{ wish.description }}
                 </p>
-                <img src="{{ asset('img/wish.jpg') }}" class="card-img-bottom rounded wish-detail-img" alt="wish image">
+                <img src="{{ asset('img/wish.jpg') }}" class="card-img-bottom rounded w-50 h-auto" alt="wish image">
                 <p class="card-text">
                     <small class="text-muted">Publié le {{ wish.dateCreated|date('d/m/Y à H:i') }}</small>
                 </p>
