--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -3,20 +3,18 @@
 {% block title  %}{{ parent() }}Detail{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="card mb-3 mt-2">
-            <div class="card-body text-center">
-                <h1 class="card-title"><i class="fas fa-star text-warning"></i> {{ wish.title }} <i class="fas fa-star text-warning"></i></h1>
-                <h5 class="card-text">
-                    {{ wish.author }}
-                </h5>
-                <p class="card-text">
-                    {{ wish.description }}
-                </p>
-                <img src="{{ asset('img/wish.jpg') }}" class="card-img-bottom rounded w-50 h-auto" alt="wish image">
-                <p class="card-text">
-                    <small class="text-muted">Publié le {{ wish.dateCreated|date('d/m/Y à H:i') }}</small>
-                </p>
+    <div class="container mt-2">
+        <div class="row justify-content-center">
+            <div class="card col-lg-8 p-0 bg-light">
+                <div class="card-body text-center p-0">
+                    <h1 class="card-header dark-blue text-white mb-2 ms-0"><i class="fas fa-star text-warning"></i> {{ wish.title }} <i class="fas fa-star text-warning"></i></h1>
+                    <h4 class="card-title">{{ wish.author }}</h4>
+                    <blockquote class="blockquote mb-0">
+                        <p class="">{{ wish.description }}</p>
+                        <footer class="blockquote-footer"><cite title="Source Title"> le {{ wish.dateCreated|date('d/m/Y à H:i') }}</cite></footer>
+                    </blockquote>
+                    <img src="{{ asset('img/wish.jpg') }}" class="card-img-bottom rounded w-50 h-auto mb-2" alt="wish image">
+                </div>
             </div>
         </div>
     </div>
