formulaire wish actif, sans contrôle ni belle mise en page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="btn text-white" aria-current="page" href="{{ path('wish_list') }}">
-                            <i class="bi bi-stars"></i> Liste des voeux
+                            <i class="bi bi-stars"></i> Liste des vœux
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn text-white" aria-current="page" href="{{ path('wish_new') }}">
+                            <i class="fas fa-star"></i> Faire un vœu
                         </a>
                     </li>
                 </ul>
