--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -7,7 +7,7 @@
         <div class="row justify-content-center">
             <div class="card col-lg-8 p-0 bg-light">
                 <div class="card-body text-center p-0">
-                    <h1 class="card-header dark-blue text-white mb-2 ms-0"><i class="fas fa-star text-warning"></i> {{ wish.title }} <i class="fas fa-star text-warning"></i></h1>
+                    <h1 class="card-header dark-blue text-white mb-2 ms-0"><i class="fas fa-star text-warning"></i> {{ wish.title }}</h1>
                     <h4 class="card-title">{{ wish.author }}</h4>
                     <blockquote class="blockquote mb-0">
                         <p class="">{{ wish.description }}</p>
