--- a/templates/wish/list.html.twig
+++ b/templates/wish/list.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="text-center text-dark-blue mt-2 mb-2">Liste des voeux <i class="bi bi-stars"></i></h1>
+        <h1 class="text-center text-dark-blue mt-2 mb-2">Liste des vœux <i class="bi bi-stars"></i></h1>
 
         {{ include('wish/_list_wishes.html.twig') }}
 
