--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,6 +53,17 @@
         </div>
     </nav>
 </div>
+
+<div class="container">
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }} mt-2 text-center" role="alert">
+                <p>{{ message }}</p>
+            </div>
+        {% endfor %}
+    {% endfor %}
+</div>
+
 <main>
     <div class="container-fluid">
         {% block body %}{% endblock %}
