--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-        <div class="card mt-2 mb-2">
+        <div class="card">
             <img class="card-img img-fluid" src="{{ asset('img/magic-lamp-large-2.jpg') }}" alt="Magic lamp">
             <div class="card-img-overlay text-white d-flex justify-content-center align-items-center overlay-dark">
                 <div class="col text-center">
