--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
     </nav>
 </div>
 
-<div class="container">
+<div class="container mt-2 mb-2">
     {% for label, messages in app.flashes %}
         {% for message in messages %}
             <div class="alert alert-{{ label }} mt-2 text-center" role="alert">
