--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -3,7 +3,7 @@
 {% block title  %}{{ parent() }}Detail{% endblock %}
 
 {% block body %}
-    <div class="container mt-2">
+    <div class="container">
         <div class="row justify-content-center">
             <div class="card col-lg-8 p-0 bg-light">
                 <div class="card-body text-center p-0">
@@ -18,5 +18,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
