--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -8,10 +8,10 @@
             <div class="card col-lg-8 p-0 bg-light">
                 <div class="card-body text-center p-0">
                     <h1 class="card-header dark-blue text-white mb-2 ms-0"><i class="fas fa-star text-warning"></i> {{ wish.title }}</h1>
-                    <h4 class="card-title">{{ wish.author }}</h4>
-                    <blockquote class="blockquote mb-0">
+                    <h4 class="card-title">{{ wish.category.name }}</h4>
+                    <blockquote class="blockquote mb-0 mx-2">
                         <p class="">{{ wish.description }}</p>
-                        <footer class="blockquote-footer"><cite title="Source Title"> le {{ wish.dateCreated|date('d/m/Y à H:i') }}</cite></footer>
+                        <footer class="blockquote-footer my-1"><span class="card-title h5">{{ wish.author }}</span><cite title="Source Title">, le {{ wish.dateCreated|date('d/m/Y à H:i') }}</cite></footer>
                     </blockquote>
                     <img src="{{ asset('img/wish.jpg') }}" class="card-img-bottom rounded w-50 h-auto mb-2" alt="wish image">
                 </div>
