--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -8,7 +8,11 @@
             <div class="card col-lg-8 p-0 bg-light">
                 <div class="card-body text-center p-0">
                     <h1 class="card-header dark-blue text-white mb-2 ms-0"><i class="fas fa-star text-warning"></i> {{ wish.title }}</h1>
-                    <h4 class="card-title">{{ wish.category.name }}</h4>
+                    <h3 class="card-text">
+                        {% for category in wish.categories %}
+                            {{ category.name }}
+                        {% endfor %}
+                    </h3>
                     <blockquote class="blockquote mb-0 mx-2">
                         <p class="">{{ wish.description }}</p>
                         <footer class="blockquote-footer my-1"><span class="card-title h5">{{ wish.author }}</span><cite title="Source Title">, le {{ wish.dateCreated|date('d/m/Y à H:i') }}</cite></footer>
