boutons like et comment

--- a/templates/wish/detail.html.twig
+++ b/templates/wish/detail.html.twig
@@ -33,12 +33,12 @@
                         <div class="container border-top">
                             <div class="row mx-2 my-2">
                                 <div class="col align-self-start text-dark-blue">
-                                    <span type="button" class="fs-5 hover-red">
+                                    <span role="button" class="fs-5 hover-red">
                                         <i class="far fa-heart"></i>
                                     </span>
                                 </div>
                                 <div class="col align-self-end text-dark-blue">
-                                    <span type="button" class="fs-5 hover-green" data-bs-toggle="modal" data-bs-target="#displayReactionForm">
+                                    <span role="button" class="fs-5 hover-green" data-bs-toggle="modal" data-bs-target="#displayReactionForm">
                                         <i class="far fa-comment"></i>
                                     </span>
                                 </div>
@@ -64,7 +64,7 @@
             <div class="modal fade" id="displayReactionForm" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-header">
+                        <div class="modal-header bg-light">
                             <div class="col-1 align-self-start">
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
