--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,8 +44,8 @@
                 <div class="navbar-nav justify-content-end">
                     <ul class="navbar-nav gap-2 me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="btn btn-warning" aria-current="page" href=""><i class="fas fa-heart"></i> <strong>Inscription</strong></a>
-                            <a class="btn btn-outline-light" aria-current="page" href=""><i class="fas fa-user"></i> Connexion</a>
+                            <a class="btn btn-warning" aria-current="page" href="{{ path('app_register') }}"><i class="fas fa-heart"></i> <strong>Inscription</strong></a>
+                            <a class="btn btn-outline-light" aria-current="page" href="{{ path('app_login') }}"><i class="fas fa-user"></i> Connexion</a>
                         </li>
                     </ul>
                 </div>
