--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,17 +35,23 @@
                             <i class="bi bi-stars"></i> Liste des vœux
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="btn text-white" aria-current="page" href="{{ path('wish_new') }}">
-                            <i class="fas fa-star"></i> Faire un vœu
-                        </a>
-                    </li>
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="btn text-white" aria-current="page" href="{{ path('wish_new') }}">
+                                <i class="fas fa-star"></i> Faire un vœu
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
                 <div class="navbar-nav justify-content-end">
                     <ul class="navbar-nav gap-2 me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="btn btn-warning" aria-current="page" href="{{ path('app_register') }}"><i class="fas fa-heart"></i> <strong>Inscription</strong></a>
-                            <a class="btn btn-outline-light" aria-current="page" href="{{ path('app_login') }}"><i class="fas fa-user"></i> Connexion</a>
+                            {%  if app.user %}
+                                <a class="btn btn-outline-light" aria-current="page" href="{{ path('app_logout') }}"><i class="fas fa-user"></i> Déconnexion ({{ app.user.username }})</a>
+                            {% else %}
+                                <a class="btn btn-warning" aria-current="page" href="{{ path('app_register') }}"><i class="fas fa-heart"></i> <strong>Inscription</strong></a>
+                                <a class="btn btn-outline-light" aria-current="page" href="{{ path('app_login') }}"><i class="fas fa-user"></i> Connexion</a>
+                            {% endif %}
                         </li>
                     </ul>
                 </div>
