--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,11 +16,14 @@
             {% endif %}
 
             <h1 class="h3 mb-3 font-weight-normal">Connectez-vous!</h1>
-            <label for="inputLogin">Email ou pseudo</label>
-            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" required autofocus>
-            <label for="inputPassword">Mot de passe</label>
-            <input type="password" name="password" id="inputPassword" class="form-control" required>
-
+            <div class="form-group">
+                <label for="inputLogin">Email ou pseudo</label>
+                <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" required autofocus>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword">Mot de passe</label>
+                <input type="password" name="password" id="inputPassword" class="form-control" required>
+            </div>
             <input type="hidden" name="_csrf_token"
                    value="{{ csrf_token('authenticate') }}"
             >
@@ -36,7 +39,7 @@
             </div>
             #}
 
-            <button class="btn btn-lg btn-primary" type="submit">
+            <button class="btn dark-blue text-white mt-2" type="submit">
                 Connexion
             </button>
         </form>
