--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,44 +4,48 @@
 
 {% block body %}
     <div class="container">
-        <form method="post">
-            {% if error %}
-                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-            {% endif %}
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        <div class="row justify-content-center">
+            <div class="col-lg-8 p-4 bg-light border rounded">
+                {% if app.user %}
+                    <div class="mb-3">
+                        Vous êtes déjà connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
+                    </div>
+                {% endif %}
+                <fieldset class="">
+                    <form method="post">
+                        <legend class="h3 text-dark-blue">Connectez-vous!</legend>
+                        <div class="form-group">
+                            <label for="inputLogin">Email ou pseudo</label>
+                            <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" required autofocus>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputPassword">Mot de passe</label>
+                            <input type="password" name="password" id="inputPassword" class="form-control" required>
+                        </div>
+                        <input type="hidden" name="_csrf_token"
+                               value="{{ csrf_token('authenticate') }}"
+                        >
 
-            {% if app.user %}
-                <div class="mb-3">
-                    Vous êtes déjà connecté en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
-                </div>
-            {% endif %}
+                        {#
+                        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                        See https://symfony.com/doc/current/security/remember_me.html
 
-            <h1 class="h3 mb-3 font-weight-normal">Connectez-vous!</h1>
-            <div class="form-group">
-                <label for="inputLogin">Email ou pseudo</label>
-                <input type="text" value="{{ last_username }}" name="login" id="inputLogin" class="form-control" required autofocus>
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" name="_remember_me"> Remember me
+                            </label>
+                        </div>
+                        #}
+
+                        <button class="btn dark-blue text-white mt-2" type="submit">
+                            Connexion
+                        </button>
+                    </form>
+                </fieldset>
             </div>
-            <div class="form-group">
-                <label for="inputPassword">Mot de passe</label>
-                <input type="password" name="password" id="inputPassword" class="form-control" required>
-            </div>
-            <input type="hidden" name="_csrf_token"
-                   value="{{ csrf_token('authenticate') }}"
-            >
-
-            {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
-
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" name="_remember_me"> Remember me
-                </label>
-            </div>
-            #}
-
-            <button class="btn dark-blue text-white mt-2" type="submit">
-                Connexion
-            </button>
-        </form>
+        </div>
     </div>
 {% endblock %}
